--- a/data/quantum/duality.html
+++ b/data/quantum/duality.html
@@ -1,61 +1,27 @@
 <div class="space-y-8">
     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-indigo-600">
-        <h2 class="text-3xl font-extrabold text-indigo-900 mb-6">1.0 La Dualité Onde-Corpuscule</h2>
+        <h2 class="text-3xl font-extrabold text-indigo-900 mb-6">La Dualité Onde-Corpuscule</h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-            Avant de parler de Qubits, il faut comprendre le mystère fondamental de la matière.
-            Est-ce une bille ? Est-ce une vague ? La réponse quantique : <strong>Les deux à la fois.</strong>
+            C'est le début de tout. La lumière est-elle une bille ou une vague ?
+            La réponse quantique : <strong>Les deux à la fois.</strong>
         </p>
     </div>
 
-    <!-- L'Expérience des Fentes de Young -->
+    <!-- Analogie -->
     <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">L'Expérience des Fentes de Young</h3>
+        <h3 class="text-xl font-bold text-gray-800 mb-4">Analogie : Le Cylindre 🔦</h3>
         <p class="text-gray-600 mb-4">
-            On tire des électrons (particules) à travers deux fentes.
-            <br>• Si c'étaient des billes, on verrait deux bandes sur l'écran.
-            <br>• Mais on voit des <strong>interférences</strong> (comme des vagues) !
-        </p>
-
-        <div class="flex flex-col md:flex-row gap-8 items-center">
-            <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center flex-1 w-full">
-                <h3 class="text-white font-bold mb-4">Simulation : Fentes de Young</h3>
-                <div id="dual-slit-viz" class="h-64 bg-black rounded border border-gray-700 relative overflow-hidden">
-                    <!-- Viz injected by initDualSlit -->
-                </div>
-                <div class="flex justify-center gap-4 mt-4">
-                    <button onclick="setSlitMode('particles')"
-                        class="px-4 py-2 bg-gray-700 text-white rounded hover:bg-gray-600 text-sm">Mode Particule
-                        (Billes)</button>
-                    <button onclick="setSlitMode('waves')"
-                        class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 text-sm">Mode Quantique
-                        (Ondes)</button>
-                </div>
-            </div>
-
-            <div class="flex-1 space-y-4">
-                <div class="bg-indigo-50 p-4 rounded border-l-4 border-indigo-400">
-                    <h4 class="font-bold text-indigo-700">Le Mystère</h4>
-                    <p class="text-sm text-gray-700 mt-1">
-                        L'électron passe par les deux fentes <strong>en même temps</strong>. Il interfère avec lui-même.
-                    </p>
-                </div>
-                <div class="bg-red-50 p-4 rounded border-l-4 border-red-400">
-                    <h4 class="font-bold text-red-700">L'Observateur</h4>
-                    <p class="text-sm text-gray-700 mt-1">
-                        Si on place un détecteur pour voir par quelle fente il passe, l'interférence disparaît ! Il
-                        redevient une bille.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Conclusion -->
-    <div class="bg-gradient-to-r from-gray-100 to-white p-6 rounded-xl border border-gray-200">
-        <h3 class="text-lg font-bold text-gray-800 mb-2">Ce qu'il faut retenir</h3>
-        <p class="text-gray-700">
-            En quantique, les objets ne sont pas des points fixes, mais des <strong>ondes de probabilité</strong>.
-            C'est ce qui permet la superposition et tout le reste !
+            Imaginez un cylindre.
+            Si vous l'éclairez de face, l'ombre est un <strong>Cercle</strong>.
+            Si vous l'éclairez de côté, l'ombre est un <strong>Rectangle</strong>.
+            L'objet réel (le cylindre) n'est ni l'un ni l'autre, mais il projette les deux propriétés selon comment on
+            le regarde.
         </p>
     </div>
+
+    <!-- Interactive Viz -->
+    class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 font-bold">Mode Onde
+    (Interférences)</button>
+</div>
+</div>
 </div>
