--- a/data/quantum/hilbert.html
+++ b/data/quantum/hilbert.html
@@ -1,127 +1,77 @@
 <div class="space-y-8">
     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-pink-500">
-        <h2 class="text-3xl font-extrabold text-pink-700 mb-6">1.2 L'Arène du Jeu : L'Espace de Hilbert</h2>
+        <h2 class="text-3xl font-extrabold text-pink-700 mb-6">L'Arène du Jeu : L'Espace de Hilbert</h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-            Pour faire de la mécanique quantique, nous avons besoin d'un espace mathématique où vivent nos vecteurs
-            d'état.
-            Cet espace s'appelle un <strong>Espace de Hilbert</strong> ($\mathcal{H}$).
+            Où vivent les états quantiques ? Pas dans notre espace 3D habituel, mais dans un espace mathématique
+            abstrait appelé <strong>Espace de Hilbert</strong>.
         </p>
     </div>
 
-    <!-- Definition -->
-    <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-white p-6 rounded-xl shadow-md">
-            <h3 class="text-xl font-bold text-gray-800 mb-4">C'est quoi exactement ?</h3>
-            <ul class="space-y-3 text-gray-600">
-                <li class="flex items-start gap-2">
-                    <span class="text-pink-500 font-bold">1.</span>
-                    <span>C'est un <strong>espace vectoriel</strong> (on peut additionner des états).</span>
-                </li>
-                <li class="flex items-start gap-2">
-                    <span class="text-pink-500 font-bold">2.</span>
-                    <span>Il est défini sur les <strong>nombres complexes</strong> ($\mathbb{C}$).</span>
-                </li>
-                <li class="flex items-start gap-2">
-                    <span class="text-pink-500 font-bold">3.</span>
-                    <span>Il est muni d'un <strong>produit scalaire</strong> (inner product).</span>
-                </li>
-                <li class="flex items-start gap-2">
-                    <span class="text-pink-500 font-bold">4.</span>
-                    <span>Il est <strong>complet</strong> (une propriété technique importante pour l'analyse).</span>
-                </li>
-            </ul>
-        </div>
+    <!-- Analogie GPS -->
+    <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold text-gray-800 mb-4">Analogie : Le GPS Quantique 📍</h3>
+        <p class="text-gray-600 mb-4">
+            Imaginez que pour définir votre position, vous n'utilisez pas (Latitude, Longitude), mais une combinaison de
+            "Nord" et "Est".
+        </p>
+        <ul class="space-y-2 text-sm text-gray-600">
+            <li>• <strong>Base :</strong> $|0\rangle$ (Nord) et $|1\rangle$ (Est).</li>
+            <li>• <strong>Vecteur :</strong> Vous êtes à "3 pas vers le Nord et 4 pas vers l'Est".</li>
+            <li>• <strong>Quantique :</strong> Vous êtes à la fois au Nord et à l'Est !</li>
+        </ul>
+    </div>
 
-        <div class="bg-gray-900 p-6 rounded-xl shadow-inner flex items-center justify-center">
-            <div id="hilbert-viz" class="text-center">
+    <!-- Interactive Viz -->
+    <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
+        <h3 class="text-white font-bold mb-4">Explorateur de Vecteur d'État</h3>
+        <p class="text-xs text-gray-400 mb-4">
+            Déplacez la souris (ou le doigt) dans le cercle pour changer l'état $|\psi\rangle$.
+            Observez comment les amplitudes $\alpha$ et $\beta$ changent.
+        </p>
+
+        <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+            <div id="hilbert-viz"
+                class="w-64 h-64 bg-black rounded-full border-4 border-gray-700 relative cursor-crosshair shadow-[0_0_30px_rgba(236,72,153,0.3)]">
                 <!-- Viz injected by initHilbertSpace -->
-                <p class="text-gray-400">Visualisation Espace Vectoriel</p>
             </div>
-        </div>
-    </div>
 
-    <!-- Produit Scalaire -->
-    <div class="bg-gradient-to-r from-gray-50 to-white p-8 rounded-2xl shadow-md border border-gray-200">
-        <h3 class="text-2xl font-bold text-gray-800 mb-4">Le Produit Scalaire (Bra-Ket)</h3>
-        <p class="text-gray-700 mb-6">
-            C'est l'outil magique qui nous permet de calculer des angles et des longueurs.
-            On le note $\langle \phi | \psi \rangle$.
-        </p>
-
-        <div class="grid md:grid-cols-2 gap-6">
-            <div class="bg-white p-4 rounded-lg border border-gray-200">
-                <h4 class="font-bold text-indigo-600 mb-2">Notation de Dirac</h4>
-                <p class="font-mono text-sm text-gray-600 mb-2">
-                    $| \psi \rangle$ = Vecteur colonne (Ket)
-                </p>
-                <p class="font-mono text-sm text-gray-600">
-                    $\langle \phi |$ = Vecteur ligne conjugué (Bra)
-                </p>
-                <div class="mt-4 p-3 bg-gray-50 rounded text-center font-mono text-gray-800">
-                    $\langle \phi | \psi \rangle = (\langle \phi |) \times (| \psi \rangle) \in \mathbb{C}$
+            <div class="bg-gray-800 p-4 rounded-lg text-left w-full max-w-xs font-mono text-sm">
+                <div class="mb-2 text-pink-400 font-bold">État Actuel :</div>
+                <div class="mb-4 text-white text-lg">
+                    $|\psi\rangle = \alpha|0\rangle + \beta|1\rangle$
+                </div>
+                <div class="space-y-2">
+                    <div class="flex justify-between">
+                        <span class="text-gray-400">Amplitude $\alpha$ :</span>
+                        <span id="val-alpha" class="text-green-400">1.00</span>
+                    </div>
+                    <div class="flex justify-between">
+                        <span class="text-gray-400">Amplitude $\beta$ :</span>
+                        <span id="val-beta" class="text-yellow-400">0.00</span>
+                    </div>
+                    <div class="h-px bg-gray-600 my-2"></div>
+                    <div class="flex justify-between">
+                        <span class="text-gray-400">Probabilité |0⟩ :</span>
+                        <span id="prob-0" class="text-green-400">100%</span>
+                    </div>
+                    <div class="flex justify-between">
+                        <span class="text-gray-400">Probabilité |1⟩ :</span>
+                        <span id="prob-1" class="text-yellow-400">0%</span>
+                    </div>
                 </div>
             </div>
-
-            <div class="bg-white p-4 rounded-lg border border-gray-200">
-                <h4 class="font-bold text-green-600 mb-2">Propriétés Clés</h4>
-                <ul class="text-sm space-y-2 text-gray-600">
-                    <li>• <strong>Conjugaison :</strong> $\langle \phi | \psi \rangle = \langle \psi | \phi \rangle^*$
-                    </li>
-                    <li>• <strong>Linéarité :</strong> Linéaire à droite, antilinéaire à gauche.</li>
-                    <li>• <strong>Positivité :</strong> $\langle \psi | \psi \rangle \geq 0$ (C'est la norme au carré !)
-                    </li>
-                </ul>
-            </div>
         </div>
     </div>
 
-    <!-- Norme et Orthogonalité -->
-    <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-blue-50 p-6 rounded-xl border-t-4 border-blue-500">
-            <h3 class="text-xl font-bold text-blue-800 mb-2">La Norme</h3>
-            <p class="text-gray-700 mb-4">
-                La "longueur" d'un vecteur d'état. En physique quantique, les états physiques sont toujours de norme 1.
-            </p>
-            <p class="text-center font-mono text-xl text-blue-900 bg-white p-2 rounded shadow-sm">
-                $||\psi|| = \sqrt{\langle \psi | \psi \rangle} = 1$
-            </p>
-        </div>
-
-        <div class="bg-red-50 p-6 rounded-xl border-t-4 border-red-500">
-            <h3 class="text-xl font-bold text-red-800 mb-2">Orthogonalité</h3>
-            <p class="text-gray-700 mb-4">
-                Deux états sont orthogonaux s'ils sont parfaitement distinctables (leur chevauchement est nul).
-            </p>
-            <p class="text-center font-mono text-xl text-red-900 bg-white p-2 rounded shadow-sm">
-                $\langle \phi | \psi \rangle = 0$
-            </p>
-        </div>
-    </div>
-
-    <!-- Bases Orthonormées -->
-    <div class="bg-white p-8 rounded-2xl shadow-lg">
-        <h3 class="text-2xl font-bold text-gray-800 mb-4">Bases Orthonormées</h3>
-        <p class="text-gray-700 mb-6">
-            Pour décrire n'importe quel vecteur, on utilise une <strong>base</strong>. C'est comme un système de
-            coordonnées.
-            Pour un Qubit, la base standard (base computationnelle) est :
-        </p>
-
-        <div class="flex justify-center gap-8 mb-6">
-            <div class="text-center">
-                <div class="font-mono text-2xl font-bold text-indigo-600 mb-2">|0⟩</div>
-                <div class="text-sm text-gray-500">Vecteur "Haut"</div>
-                <div class="text-xs font-mono bg-gray-100 p-1 rounded mt-1">$\begin{pmatrix} 1 \\ 0 \end{pmatrix}$</div>
-            </div>
-            <div class="text-center">
-                <div class="font-mono text-2xl font-bold text-indigo-600 mb-2">|1⟩</div>
-                <div class="text-sm text-gray-500">Vecteur "Bas"</div>
-                <div class="text-xs font-mono bg-gray-100 p-1 rounded mt-1">$\begin{pmatrix} 0 \\ 1 \end{pmatrix}$</div>
-            </div>
-        </div>
-
-        <p class="text-center text-gray-600 italic">
-            Ces vecteurs sont de norme 1 et orthogonaux entre eux : $\langle 0 | 1 \rangle = 0$.
+    <!-- Normalisation -->
+    <div class="bg-pink-50 p-6 rounded-xl border-l-4 border-pink-500">
+        <h3 class="text-lg font-bold text-pink-800 mb-2">La Règle d'Or : Normalisation</h3>
+        <p class="text-gray-700 text-sm">
+            La somme des probabilités doit toujours faire 100%.
+            <br>
+            $|\alpha|^2 + |\beta|^2 = 1$
+            <br>
+            C'est pour ça que le vecteur reste toujours sur le cercle (ou la sphère) de rayon 1.
         </p>
     </div>
 </div>
