--- a/data/quantum/linear_algebra.html
+++ b/data/quantum/linear_algebra.html
@@ -1,71 +1,70 @@
-valeur $\lambda_i$.
-</p>
-</div>
-</div>
+<div class="space-y-8">
+    <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-indigo-500">
+        <h2 class="text-3xl font-extrabold text-indigo-700 mb-6">Algèbre Linéaire Complexe</h2>
+        <p class="text-lg text-gray-700 leading-relaxed">
+            C'est la grammaire du langage quantique. Pas besoin d'être un expert, il faut juste comprendre comment les
+            vecteurs s'additionnent et se multiplient.
+        </p>
+    </div>
 
-<!-- Produit Tensoriel -->
-<div class="bg-gradient-to-br from-indigo-50 to-white p-8 rounded-2xl shadow-md border border-indigo-100">
-    <h3 class="text-2xl font-bold text-indigo-900 mb-6 flex items-center gap-3">
-        <span class="text-3xl">⊗</span> Le Produit Tensoriel
-    </h3>
-    <p class="text-gray-700 mb-6">
-        Comment décrire deux qubits ensemble ? On ne les additionne pas, on les multiplie avec le produit tensoriel
-        (Kronecker product).
-    </p>
-
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-        <div>
-            <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200 mb-4">
-                <p class="font-mono text-sm text-gray-800">
-                    $| \psi \rangle = | \psi_1 \rangle \otimes | \psi_2 \rangle$
-                </p>
-                <p class="font-mono text-sm text-gray-800 mt-2">
-                    Dim($\mathcal{H}_1 \otimes \mathcal{H}_2$) = Dim($\mathcal{H}_1$) × Dim($\mathcal{H}_2$)
-                </p>
+    <!-- Bra-Ket -->
+    <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold text-gray-800 mb-4">La Notation Bra-Ket (Dirac) 🎼</h3>
+        <p class="text-gray-600 mb-6">
+            Paul Dirac a inventé une notation super élégante pour simplifier la vie.
+        </p>
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-gray-50 p-4 rounded border border-gray-200 text-center group hover:bg-indigo-50 transition">
+                <h4 class="font-bold text-indigo-600 mb-2 text-2xl">|Ket⟩</h4>
+                <p class="text-sm text-gray-600 mb-2">Vecteur Colonne (État)</p>
+                <div class="font-mono bg-white p-2 rounded inline-block shadow-sm">
+                    $\begin{pmatrix} \alpha \\ \beta \end{pmatrix}$
+                </div>
             </div>
-            <p class="text-sm text-gray-600">
-                Si on a 2 qubits (dim 2), l'espace total est de dimension 4 ($2 \times 2$).
-                <br>
-                Si on a $N$ qubits, la dimension est $2^N$. C'est exponentiel !
-            </p>
+            <div class="bg-gray-50 p-4 rounded border border-gray-200 text-center group hover:bg-indigo-50 transition">
+                <h4 class="font-bold text-indigo-600 mb-2 text-2xl">⟨Bra|</h4>
+                <p class="text-sm text-gray-600 mb-2">Vecteur Ligne (Dual)</p>
+                <div class="font-mono bg-white p-2 rounded inline-block shadow-sm">
+                    $(\alpha^* \quad \beta^*)$
+                </div>
+            </div>
         </div>
 
-        <div class="bg-gray-900 p-4 rounded-lg text-green-400 font-mono text-xs overflow-x-auto">
-            <p class="mb-2">// Exemple : |0⟩ ⊗ |1⟩</p>
-            <p>|0⟩ = [1, 0]</p>
-            <p>|1⟩ = [0, 1]</p>
-            <p class="mt-2 text-white">|01⟩ = [1*0, 1*1, 0*0, 0*1]</p>
-            <p class="text-white"> = [0, 1, 0, 0]</p>
-        </div>
-    </div>
-</div>
-
-<!-- États Intriqués -->
-<div class="bg-pink-50 p-8 rounded-2xl shadow-md border-l-8 border-pink-500">
-    <h3 class="text-2xl font-bold text-pink-800 mb-4">L'Intrication (Entanglement)</h3>
-    <p class="text-gray-700 mb-4">
-        C'est une conséquence directe du produit tensoriel. Certains états de l'espace global <strong>ne peuvent
-            pas</strong> s'écrire comme un produit tensoriel simple $|\psi_1\rangle \otimes |\psi_2\rangle$.
-    </p>
-
-    <div class="flex flex-col md:flex-row gap-6 items-center justify-center mt-6">
-        <div class="bg-white px-6 py-4 rounded-xl shadow-sm text-center">
-            <p class="font-bold text-gray-500 mb-2">État de Bell (Phi+)</p>
-            <p class="font-mono text-xl text-pink-600">
-                $|\Phi^+\rangle = \frac{|00\rangle + |11\rangle}{\sqrt{2}}$
-            </p>
-        </div>
-        <div class="text-gray-400 text-4xl">≠</div>
-        <div class="bg-white px-6 py-4 rounded-xl shadow-sm text-center opacity-75">
-            <p class="font-bold text-gray-400 mb-2">État Séparable</p>
-            <p class="font-mono text-xl text-gray-500">
-                $|a\rangle \otimes |b\rangle$
-            </p>
+        <div class="mt-6 text-center">
+            <span class="text-3xl font-bold text-gray-400">⟨Bra|Ket⟩ = Bracket (Nombre)</span>
         </div>
     </div>
 
-    <p class="text-center text-sm text-pink-700 mt-4 font-medium">
-        "Spooky action at a distance" — Einstein
-    </p>
-</div>
+    <!-- Produit Tensoriel Viz -->
+    <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
+        <h3 class="text-white font-bold mb-4">Le Monstre : Produit Tensoriel (⊗)</h3>
+        <p class="text-gray-400 text-sm mb-6">
+            C'est ce qui permet à l'espace quantique de devenir gigantesque.
+            Regardez comment deux petits vecteurs (2D) créent un grand espace (4D).
+        </p>
+
+        <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+            <!-- Input Vectors -->
+            <div class="flex flex-col gap-4">
+                <div class="bg-gray-800 p-2 rounded text-white text-xs font-mono">
+                    |a⟩ = [1, 0]
+                </div>
+                <div class="text-gray-500 font-bold">⊗</div>
+                <div class="bg-gray-800 p-2 rounded text-white text-xs font-mono">
+                    |b⟩ = [1, 1]
+                </div>
+            </div>
+
+            <div class="text-gray-500 text-2xl">→</div>
+
+            <!-- Canvas Viz -->
+            <div id="tensor-viz" class="w-64 h-64 bg-black rounded border border-gray-700 relative">
+                <!-- Viz injected by initComplexAlgebra -->
+            </div>
+        </div>
+
+        <p class="text-xs text-gray-500 mt-4">
+            Chaque carré représente une amplitude de l'état combiné $|ab\rangle$.
+        </p>
+    </div>
 </div>
