--- a/data/quantum/qec.html
+++ b/data/quantum/qec.html
@@ -1,7 +1,70 @@
-<div id="qec-viz" class="h-64 bg-black rounded border border-gray-700 relative overflow-hidden">
-    <!-- Viz injected by initQEC -->
+<!-- Code de Répétition -->
+<div class="bg-emerald-50 p-6 rounded-xl border border-emerald-200">
+    <h3 class="text-xl font-bold text-emerald-900 mb-4">Le Code de Répétition (3-qubit bit flip)</h3>
+    <p class="text-gray-700 text-sm mb-4">
+        On encode un qubit logique $|0\rangle_L$ sur 3 qubits physiques $|000\rangle$.
+        Si un qubit flippe (ex: $|010\rangle$), on le détecte par "vote majoritaire" sans savoir si c'était 000 ou
+        111.
+    </p>
+
+    <div class="flex justify-center gap-8 font-mono text-sm bg-white p-4 rounded-lg shadow-sm">
+        <div class="text-center">
+            <div class="text-gray-500">Logique 0</div>
+            <div class="text-emerald-600 font-bold">|000⟩</div>
+        </div>
+        <div class="text-center">
+            <div class="text-gray-500">Logique 1</div>
+            <div class="text-emerald-600 font-bold">|111⟩</div>
+        </div>
+    </div>
 </div>
-<p class="text-xs text-gray-400 mt-4">On encode 1 qubit logique sur 3 qubits physiques. Si un se retourne, la
-    majorité l'emporte.</p>
+
+<!-- Interactive Viz -->
+<div class="bg-gray-900 p-6 rounded-xl shadow-inner">
+    <h3 class="text-white font-bold mb-4 text-center">Simulateur de Correction</h3>
+
+    <div class="flex flex-col items-center gap-6">
+        <!-- Qubits Display -->
+        <div class="flex gap-4">
+            <div id="qec-q1"
+                class="w-16 h-16 bg-gray-800 rounded-lg border-2 border-gray-600 flex items-center justify-center text-2xl text-white cursor-pointer hover:border-red-500 transition-colors"
+                onclick="flipQECQubit(0)">0</div>
+            <div id="qec-q2"
+                class="w-16 h-16 bg-gray-800 rounded-lg border-2 border-gray-600 flex items-center justify-center text-2xl text-white cursor-pointer hover:border-red-500 transition-colors"
+                onclick="flipQECQubit(1)">0</div>
+            <div id="qec-q3"
+                class="w-16 h-16 bg-gray-800 rounded-lg border-2 border-gray-600 flex items-center justify-center text-2xl text-white cursor-pointer hover:border-red-500 transition-colors"
+                onclick="flipQECQubit(2)">0</div>
+        </div>
+
+        <p class="text-xs text-gray-400">Cliquez sur un qubit pour simuler une erreur (Bit Flip).</p>
+
+        <!-- Syndrome Measurement -->
+        <div class="bg-gray-800 p-4 rounded w-full max-w-md">
+            <div class="flex justify-between items-center mb-2">
+                <span class="text-gray-400 text-sm">Mesure du Syndrome (Z1Z2, Z2Z3) :</span>
+                <span id="qec-syndrome" class="font-mono text-yellow-400">OK</span>
+            </div>
+            <div class="h-1 bg-gray-700 rounded overflow-hidden">
+                <div id="qec-correction-bar" class="h-full bg-emerald-500 w-0 transition-all duration-500"></div>
+            </div>
+        </div>
+
+        <button onclick="applyQECCorrection()" id="qec-fix-btn"
+            class="px-6 py-2 bg-emerald-600 hover:bg-emerald-500 text-white rounded font-bold disabled:opacity-50 disabled:cursor-not-allowed">
+            Appliquer la Correction
+        </button>
+    </div>
+</div>
+
+<!-- Surface Code -->
+<div class="bg-gradient-to-br from-gray-100 to-white p-6 rounded-xl border border-gray-200">
+    <h3 class="text-lg font-bold text-gray-800 mb-2">Le Graal : Surface Code</h3>
+    <p class="text-gray-600 text-sm">
+        Pour corriger à la fois les erreurs X et Z, on utilise des codes topologiques comme le <strong>Surface
+            Code</strong>.
+        C'est un damier de qubits où l'on mesure des stabilisateurs. C'est la méthode choisie par Google et IBM pour
+        le futur.
+    </p>
 </div>
 </div>
