--- a/data/quantum/qkd.html
+++ b/data/quantum/qkd.html
@@ -1,51 +1,80 @@
-<div class="space-y-8">
-    <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-yellow-600">
-        <h2 class="text-3xl font-extrabold text-yellow-900 mb-6">7.1 Protocoles QKD (BB84)</h2>
-        <div class="space-y-6">
-            <div class="bg-white p-6 rounded-lg shadow-sm">
-                <h2 class="text-2xl font-bold text-indigo-700 mb-4">Distribution Quantique de Clés (QKD)</h2>
-                <p class="text-gray-700 mb-4">
-                    Le protocole BB84 permet à deux parties (Alice et Bob) de générer une clé secrète partagée. La
-                    sécurité repose sur les lois de la physique quantique : toute tentative d'espionnage perturbe l'état
-                    du système.
-                </p>
+<!-- Le Protocole BB84 -->
+<div class="grid md:grid-cols-2 gap-8">
+    <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-200">
+        <h3 class="text-xl font-bold text-indigo-700 mb-4">Le Protocole BB84 (1984)</h3>
+        <ol class="list-decimal list-inside text-gray-700 space-y-3 text-sm">
+            <li><strong>Alice</strong> envoie des photons polarisés aléatoirement dans deux bases (+ ou x).</li>
+            <li><strong>Bob</strong> mesure chaque photon dans une base aléatoire (+ ou x).</li>
+            <li><strong>Sifting :</strong> Alice et Bob s'appellent et comparent <em>seulement</em> leurs bases.
+            </li>
+            <li>Ils gardent les bits où les bases concordent (environ 50%).</li>
+            <li>C'est leur <strong>Clé Brute</strong>.</li>
+        </ol>
+    </div>
 
-                <div class="bg-green-50 p-4 rounded-lg border-l-4 border-green-500 mb-4">
-                    <h3 class="font-bold text-green-800 mb-2">🔐 Analogie : Les Coffres-Forts Fragiles</h3>
-                    <p class="text-sm text-green-700">
-                        Alice envoie des coffres-forts (photons) à Bob.
-                        <br>
-                        Si Eve (l'espionne) essaie d'ouvrir un coffre pour voir ce qu'il y a dedans, le mécanisme
-                        quantique fragile se brise et change la couleur du contenu.
-                        <br>
-                        Bob et Alice peuvent alors comparer un échantillon de leurs clés. S'ils voient trop d'erreurs,
-                        ils savent qu'Eve a écouté !
-                    </p>
-                </div>
-
-                <div class="bg-gray-900 p-6 rounded-lg shadow-inner flex flex-col items-center">
-                    <div id="qkd-viz" class="w-full h-64 bg-gray-800 rounded relative"></div>
-                    <div class="flex gap-4 mt-4">
-                        <button onclick="window.sendQubit()"
-                            class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 font-bold">Envoyer
-                            Qubit</button>
-                        <button onclick="window.toggleEve()"
-                            class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-500 font-bold">Activer/Désactiver
-                            Eve 🕵️‍♀️</button>
-                    </div>
-                    <p class="text-gray-400 text-xs mt-2">Cliquez pour simuler l'envoi et l'interception.</p>
-                </div>
-            </div>
-
-            <div class="bg-white p-6 rounded-lg shadow-sm">
-                <h3 class="text-xl font-bold text-gray-800 mb-3">Le Protocole BB84</h3>
-                <ol class="list-decimal list-inside text-gray-700 space-y-2">
-                    <li>Alice choisit aléatoirement une base (+ ou x) et un bit (0 ou 1).</li>
-                    <li>Elle envoie le photon polarisé correspondant.</li>
-                    <li>Bob choisit aléatoirement une base de mesure.</li>
-                    <li>S'ils ont choisi la même base, leurs bits sont corrélés. Sinon, c'est aléatoire (50%).</li>
-                    <li>Ils comparent publiquement leurs bases (pas les bits !) et gardent ceux où les bases concordent.
-                    </li>
-                </ol>
-            </div>
+    <div class="bg-red-50 p-6 rounded-xl border border-red-200">
+        <h3 class="text-xl font-bold text-red-800 mb-4">L'Espionne (Eve)</h3>
+        <p class="text-gray-700 text-sm mb-4">
+            Si Eve intercepte le photon pour le lire, elle doit le mesurer.
+            Mais elle ne connaît pas la base ! Elle a 50% de chance de se tromper et de <strong>détruire
+                l'état</strong>.
+        </p>
+        <div class="bg-white p-3 rounded border border-red-100 text-xs text-red-600 font-mono">
+            Erreur introduite par Eve ≈ 25%
         </div>
+        <p class="text-gray-700 text-sm mt-4">
+            Alice et Bob sacrifient une partie de leur clé pour vérifier le taux d'erreur. S'il est > 0, Eve est là
+            ! Ils jettent tout.
+        </p>
+    </div>
+</div>
+
+<!-- Interactive Viz -->
+<div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
+    <h3 class="text-white font-bold mb-4">Simulation : BB84 avec Eve</h3>
+
+    <div class="relative w-full h-64 bg-gray-800 rounded-lg overflow-hidden mb-4">
+        <!-- Background Grid -->
+        <div class="absolute inset-0 opacity-10"
+            style="background-image: radial-gradient(#fff 1px, transparent 1px); background-size: 20px 20px;"></div>
+
+        <!-- Actors -->
+        <div class="absolute left-4 top-1/2 -translate-y-1/2 flex flex-col items-center">
+            <div class="text-yellow-400 font-bold mb-2">Alice</div>
+            <div class="w-12 h-12 bg-yellow-600 rounded-full flex items-center justify-center text-2xl">👩</div>
+        </div>
+
+        <div class="absolute right-4 top-1/2 -translate-y-1/2 flex flex-col items-center">
+            <div class="text-blue-400 font-bold mb-2">Bob</div>
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-2xl">👨</div>
+        </div>
+
+        <div id="eve-container"
+            class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center transition-opacity duration-500 opacity-0">
+            <div class="text-red-500 font-bold mb-2">Eve</div>
+            <div
+                class="w-12 h-12 bg-red-600 rounded-full flex items-center justify-center text-2xl shadow-[0_0_20px_rgba(220,38,38,0.8)]">
+                🕵️‍♀️</div>
+        </div>
+
+        <!-- Canvas for Photons -->
+        <canvas id="qkd-viz" class="absolute inset-0 pointer-events-none"></canvas>
+    </div>
+
+    <div class="flex justify-center gap-4">
+        <button onclick="window.sendQubit()"
+            class="px-6 py-2 bg-indigo-600 hover:bg-indigo-500 text-white rounded-lg font-bold shadow-lg transition-all active:scale-95">
+            Envoyer un Photon 🔫
+        </button>
+        <button onclick="window.toggleEve()" id="eve-toggle-btn"
+            class="px-6 py-2 bg-gray-700 hover:bg-red-900 text-gray-300 hover:text-white rounded-lg font-bold shadow-lg transition-all border border-gray-600">
+            Activer Eve 🕵️‍♀️
+        </button>
+    </div>
+
+    <div id="qkd-log"
+        class="mt-4 h-20 bg-black rounded p-2 font-mono text-xs text-left overflow-y-auto text-green-400 border border-gray-700">
+        > Prêt pour la transmission...
+    </div>
+</div>
+</div>
