--- a/data/quantum/spin_su2.html
+++ b/data/quantum/spin_su2.html
@@ -1,66 +1,32 @@
 <div class="space-y-8">
     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-purple-800">
-        <h2 class="text-3xl font-extrabold text-purple-900 mb-6">5.3 Spin & Symétrie SU(2)</h2>
+        <h2 class="text-3xl font-extrabold text-purple-900 mb-6">Spin & Symétrie SU(2)</h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-            Le spin est une propriété intrinsèque des particules, purement quantique. C'est une manifestation de la
-            symétrie de rotation.
+            Le Spin est la propriété la plus purement quantique.
+            Ce n'est pas une rotation physique (l'électron ne tourne pas sur lui-même), c'est un moment angulaire
+            intrinsèque.
         </p>
     </div>
 
-    <!-- Algèbre -->
+    <!-- Analogie Top -->
     <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">L'Algèbre du Moment Cinétique</h3>
+        <h3 class="text-xl font-bold text-gray-800 mb-4">Analogie : La Toupie Magique 🌪️</h3>
         <p class="text-gray-600 mb-4">
-            Que ce soit le spin ou le moment orbital, ils obéissent tous aux mêmes règles de commutation :
-        </p>
-        <div class="bg-gray-100 p-4 rounded text-center font-mono text-xl text-purple-800">
-            $[J_x, J_y] = i\hbar J_z$
-        </div>
-        <p class="text-xs text-gray-500 mt-2 text-center">
-            (et permutations cycliques). Cela implique que l'on ne peut pas connaître les 3 composantes en même temps.
+            Imaginez une toupie qui doit faire <strong>2 tours complets</strong> (720°) pour revenir à son état initial.
+            C'est ça, le spin 1/2. C'est bizarre, mais c'est comme ça que la matière tient ensemble (Principe
+            d'exclusion de Pauli).
         </p>
     </div>
 
-    <!-- Addition de Spins -->
-    <div class="bg-gradient-to-br from-indigo-50 to-white p-8 rounded-2xl shadow-md border border-indigo-200">
-        <h3 class="text-2xl font-bold text-indigo-900 mb-4">Addition de Spins (Clebsch-Gordan)</h3>
-        <p class="text-gray-700 mb-4">
-            Que se passe-t-il quand on met deux particules de spin 1/2 ensemble ?
+    <!-- Interactive Viz -->
+    <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
+        <h3 class="text-white font-bold mb-4">Précession du Spin</h3>
+        <p class="text-gray-400 text-sm mb-6">
+            Dans un champ magnétique, le spin "danse" (précession de Larmor).
         </p>
-        <div class="flex justify-center gap-8 font-mono text-lg">
-            <div class="text-center">
-                <p class="font-bold text-gray-500">1/2 ⊗ 1/2 =</p>
-            </div>
-            <div class="text-center">
-                <p class="font-bold text-indigo-600">0 (Singulet)</p>
-                <p class="text-xs text-gray-400">Spin total 0 (antisymétrique)</p>
-            </div>
-            <div class="text-center">
-                <p class="font-bold text-gray-500">⊕</p>
-            </div>
-            <div class="text-center">
-                <p class="font-bold text-indigo-600">1 (Triplet)</p>
-                <p class="text-xs text-gray-400">Spin total 1 (symétrique)</p>
-            </div>
-        </div>
-    </div>
 
-    <!-- Application : IRM -->
-    <div class="bg-green-50 p-6 rounded-xl border-t-4 border-green-500">
-        <h3 class="text-xl font-bold text-green-800 mb-3">Application : RMN & IRM</h3>
-        <p class="text-gray-700 text-sm">
-            L'Imagerie par Résonance Magnétique utilise le spin des protons de votre corps.
-            On les aligne avec un champ magnétique fort ($B_0$), puis on les fait basculer avec une onde radio ($B_1$).
-            Leur relaxation émet un signal qui permet de reconstruire l'image.
-        </p>
-    </div>
-
-    <!-- Viz -->
-    <div class="bg-gray-900 p-6 rounded-xl shadow-inner">
-        <h3 class="text-white font-bold mb-4">Visualisation : Précession de Larmor (Spin)</h3>
-        <div id="spin-viz" class="h-64 bg-black rounded border border-gray-700 flex items-center justify-center">
+        <div id="spin-viz" class="w-64 h-64 mx-auto bg-black rounded-full border border-gray-700 relative">
             <!-- Viz injected by initSpinSU2 -->
-            <p class="text-gray-500">Cône de Précession</p>
         </div>
     </div>
 </div>
