--- a/data/quantum/superconducting.html
+++ b/data/quantum/superconducting.html
@@ -1,17 +1,63 @@
 <div class="space-y-8">
     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-blue-400">
-        <h2 class="text-3xl font-extrabold text-blue-900 mb-6">9.1 Supraconducteurs (IBM, Google)</h2>
+        <h2 class="text-3xl font-extrabold text-blue-900 mb-6">Supraconducteurs (IBM, Google)</h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-            Des circuits électriques refroidis proche du zéro absolu (-273°C).
-            Ce sont des <strong>atomes artificiels</strong>. Rapides mais fragiles.
+            C'est la technologie la plus avancée actuellement.
+            On crée un circuit électrique LC (Inductance-Condensateur) qui se comporte comme un atome artificiel.
+            Pour le rendre quantique, on le refroidit à <strong>15 milli-Kelvin</strong> (plus froid que l'espace vide).
         </p>
     </div>
 
-    <!-- Viz -->
+    <!-- Transmon -->
+    <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-blue-50 p-6 rounded-xl border border-blue-200">
+            <h3 class="text-xl font-bold text-blue-800 mb-2">L'Oscillateur Harmonique</h3>
+            <p class="text-gray-700 text-sm mb-4">
+                Un circuit LC normal a des niveaux d'énergie équidistants.
+                Impossible d'isoler $|0\rangle \to |1\rangle$ sans toucher $|2\rangle$.
+            </p>
+            <div class="h-16 flex items-end justify-center gap-2 border-b border-gray-400 pb-1">
+                <div class="w-8 bg-blue-300 h-1/4"></div>
+                <div class="w-8 bg-blue-400 h-2/4"></div>
+                <div class="w-8 bg-blue-500 h-3/4"></div>
+                <div class="w-8 bg-blue-600 h-full"></div>
+            </div>
+            <p class="text-center text-xs text-gray-500 mt-1">Écarts égaux (Mauvais)</p>
+        </div>
+
+        <div class="bg-indigo-50 p-6 rounded-xl border border-indigo-200">
+            <h3 class="text-xl font-bold text-indigo-800 mb-2">La Jonction Josephson</h3>
+            <p class="text-gray-700 text-sm mb-4">
+                C'est l'élément magique (non-linéaire). Elle modifie le potentiel pour espacer les niveaux différemment.
+                On peut enfin cibler uniquement la transition $|0\rangle \leftrightarrow |1\rangle$.
+            </p>
+            <div class="h-16 flex items-end justify-center gap-2 border-b border-gray-400 pb-1">
+                <div class="w-8 bg-indigo-300 h-1/4"></div>
+                <div class="w-8 bg-indigo-400 h-3/5"></div> <!-- Bigger gap -->
+                <div class="w-8 bg-indigo-500 h-4/5"></div> <!-- Smaller gap -->
+                <div class="w-8 bg-indigo-600 h-full"></div>
+            </div>
+            <p class="text-center text-xs text-gray-500 mt-1">Anharmonicité (Bon !)</p>
+        </div>
+    </div>
+
+    <!-- Interactive Viz -->
     <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
-        <h3 class="text-white font-bold mb-4">Schéma : Qubit Transmon</h3>
-        <div id="superconducting-viz" class="h-64 bg-black rounded border border-gray-700 relative overflow-hidden">
-            <!-- Viz injected by initSuperconducting -->
+        <h3 class="text-white font-bold mb-4">Simulation : Le Qubit Transmon</h3>
+        <p class="text-xs text-gray-400 mb-6">
+            Visualisez le courant osciller dans la boucle supraconductrice.
+            La jonction Josephson (la croix) agit comme une barrière tunnel.
+        </p>
+
+        <div class="relative w-full h-64 bg-black rounded border border-gray-700 overflow-hidden mb-4">
+            <canvas id="superconducting-viz" class="absolute inset-0 w-full h-full"></canvas>
+        </div>
+
+        <div class="flex justify-center gap-4">
+            <button onclick="pulseTransmon()"
+                class="px-6 py-2 bg-blue-600 hover:bg-blue-500 text-white rounded font-bold shadow-lg active:scale-95 transition-all">
+                Envoyer une impulsion Micro-onde 📡
+            </button>
         </div>
     </div>
 </div>
