--- a/data/quantum/theorems.html
+++ b/data/quantum/theorems.html
@@ -1,17 +1,71 @@
-<h3 class="text-xl font-bold text-green-800 mb-2">✨ Téléportation Quantique</h3>
-<p class="text-gray-700">
-    On ne copie pas l'état, on le <strong>déplace</strong>. L'original est détruit pour que la copie
-    apparaisse ailleurs.
-</p>
-</div>
+<!-- No-Cloning -->
+<div class="bg-gradient-to-r from-red-50 to-white p-8 rounded-2xl shadow-md border border-red-100">
+    <div class="flex items-start gap-4">
+        <div class="text-4xl">🐑</div>
+        <div>
+            <h3 class="text-2xl font-bold text-red-900 mb-2">Théorème de Non-Clonage</h3>
+            <p class="text-gray-700 mb-4">
+                <strong>Il est IMPOSSIBLE de copier parfaitement un état quantique inconnu.</strong>
+            </p>
+            <p class="text-sm text-gray-600">
+                Si je vous donne un qubit $|\psi\rangle$ sans vous dire ce qu'il est, vous ne pouvez pas créer une
+                machine qui sort deux copies $|\psi\rangle \otimes |\psi\rangle$.
+                C'est ce qui rend la monnaie quantique infalsifiable !
+            </p>
+        </div>
+    </div>
 </div>
 
-<!-- Viz -->
+<!-- Viz: Cloning Attempt -->
 <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
-    <h3 class="text-white font-bold mb-4">Visualisation : Essai de Clonage</h3>
-    <div id="theorems-viz" class="h-64 bg-black rounded border border-gray-700 relative overflow-hidden">
-        <!-- Viz injected by initQuantumTheorems -->
+    <h3 class="text-white font-bold mb-4">Expérience : La Machine à Copier (Défectueuse)</h3>
+
+    <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+        <div class="relative">
+            <div class="text-gray-400 text-xs mb-1">Original</div>
+            <div id="cloning-original"
+                class="w-24 h-24 bg-black rounded-full border-2 border-green-500 shadow-[0_0_10px_rgba(34,197,94,0.5)] flex items-center justify-center text-white font-mono">
+                |ψ⟩
+            </div>
+        </div>
+
+        <div class="flex flex-col gap-2">
+            <button onclick="attemptCloning()"
+                class="px-6 py-3 bg-red-600 hover:bg-red-500 text-white font-bold rounded-lg shadow-lg transform active:scale-95 transition-all">
+                Tenter le Clonage ⚡
+            </button>
+            <div id="cloning-result" class="text-xs text-red-400 h-4"></div>
+        </div>
+
+        <div class="relative">
+            <div class="text-gray-400 text-xs mb-1">Copie (Fidélité < 100%)</div>
+                    <div id="cloning-copy"
+                        class="w-24 h-24 bg-black rounded-full border-2 border-red-500 opacity-50 flex items-center justify-center text-gray-500 font-mono">
+                        ?
+                    </div>
+            </div>
+        </div>
     </div>
-    <p class="text-xs text-gray-400 mt-4">Essayez de copier le qubit... spoiler : ça rate.</p>
-</div>
+
+    <!-- Teleportation -->
+    <div class="bg-indigo-50 p-8 rounded-2xl shadow-md border-l-8 border-indigo-500">
+        <h3 class="text-2xl font-bold text-indigo-800 mb-4">✨ Téléportation Quantique</h3>
+        <p class="text-gray-700 mb-4">
+            Si on ne peut pas copier, peut-on déplacer ? <strong>OUI.</strong>
+        </p>
+        <div class="bg-white p-4 rounded-lg shadow-sm border border-indigo-100">
+            <ol class="list-decimal list-inside space-y-2 text-gray-700 text-sm">
+                <li>Alice et Bob partagent une paire intriquée (Bell pair).</li>
+                <li>Alice effectue une mesure conjointe sur son qubit à téléporter et sa moitié de paire.</li>
+                <li>Alice envoie le résultat (2 bits classiques) à Bob par téléphone.</li>
+                <li>Bob applique une correction (X ou Z) sur sa moitié.</li>
+                <li><strong>Magie :</strong> Le qubit de Bob devient exactement $|\psi\rangle$. L'original chez
+                    Alice est détruit.</li>
+            </ol>
+        </div>
+        <p class="text-xs text-indigo-600 mt-4 italic">
+            Note : On ne transporte pas de matière, seulement de l'information (l'état quantique). Et pas plus vite
+            que la lumière (besoin des 2 bits classiques).
+        </p>
+    </div>
 </div>
