--- a/data/quantum/trapped_ions.html
+++ b/data/quantum/trapped_ions.html
@@ -1,17 +1,63 @@
 <div class="space-y-8">
     <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-purple-400">
-        <h2 class="text-3xl font-extrabold text-purple-900 mb-6">9.2 Ions Piégés (IonQ)</h2>
+        <h2 class="text-3xl font-extrabold text-purple-900 mb-6">Ions Piégés (IonQ, Honeywell)</h2>
         <p class="text-lg text-gray-700 leading-relaxed">
-            De vrais atomes flottant dans le vide, tenus par des lasers.
-            Très stables, très précis, mais lents.
+            Ici, les qubits sont de <strong>vrais atomes</strong> (ions chargés) flottant dans le vide, maintenus par
+            des champs électriques.
+            C'est la technologie la plus précise (haute fidélité), mais elle est plus lente.
         </p>
     </div>
 
-    <!-- Viz -->
+    <!-- Mécanisme -->
+    <div class="bg-purple-50 p-6 rounded-xl border border-purple-200">
+        <h3 class="text-xl font-bold text-purple-800 mb-4">Comment ça marche ?</h3>
+        <ul class="space-y-4 text-gray-700 text-sm">
+            <li class="flex items-start gap-3">
+                <span class="text-2xl">🧲</span>
+                <div>
+                    <strong>Piège de Paul :</strong> Des champs électriques oscillants confinent les ions en une ligne
+                    parfaite.
+                    Ils se repoussent (Coulomb) mais sont forcés de rester ensemble.
+                </div>
+            </li>
+            <li class="flex items-start gap-3">
+                <span class="text-2xl">❄️</span>
+                <div>
+                    <strong>Refroidissement Laser :</strong> On utilise des lasers pour "freiner" les atomes jusqu'à
+                    l'immobilité quasi-totale.
+                </div>
+            </li>
+            <li class="flex items-start gap-3">
+                <span class="text-2xl">🎸</span>
+                <div>
+                    <strong>Bus de Phonons :</strong> Pour intriquer deux ions éloignés, on fait vibrer toute la chaîne
+                    (comme une corde de guitare).
+                    L'information passe par ces vibrations (phonons).
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <!-- Interactive Viz -->
     <div class="bg-gray-900 p-6 rounded-xl shadow-inner text-center">
-        <h3 class="text-white font-bold mb-4">Visualisation : Chaîne d'Ions</h3>
-        <div id="trapped-ions-viz" class="h-64 bg-black rounded border border-gray-700 relative overflow-hidden">
-            <!-- Viz injected by initTrappedIons -->
+        <h3 class="text-white font-bold mb-4">Simulation : Chaîne d'Ions</h3>
+        <p class="text-xs text-gray-400 mb-6">
+            Activez les lasers pour manipuler les ions. Notez comment ils vibrent ensemble (modes collectifs).
+        </p>
+
+        <div class="relative w-full h-64 bg-black rounded border border-gray-700 overflow-hidden mb-4">
+            <canvas id="trapped-ions-viz" class="absolute inset-0 w-full h-full"></canvas>
+        </div>
+
+        <div class="flex justify-center gap-4">
+            <button onclick="laserPulseIons('cool')"
+                class="px-4 py-2 bg-cyan-600 hover:bg-cyan-500 text-white rounded font-bold shadow-lg active:scale-95 transition-all">
+                Refroidir (Cooling) ❄️
+            </button>
+            <button onclick="laserPulseIons('entangle')"
+                class="px-4 py-2 bg-purple-600 hover:bg-purple-500 text-white rounded font-bold shadow-lg active:scale-95 transition-all">
+                Intriquer (Vibration) 〰️
+            </button>
         </div>
     </div>
 </div>
