--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <label class="text-xs text-indigo-300 uppercase font-bold tracking-wider">Matière</label>
             <select id="courseSelector" onchange="switchCourse(this.value)"
                 class="w-full mt-2 bg-indigo-700 border-none rounded text-white p-2 focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer font-bold text-sm">
+                <option value="bases">🏛️ Bases Mathématiques</option>
                 <option value="analysis">📉 Analyse & Calcul</option>
                 <option value="algebra">📐 Algèbre Linéaire</option>
                 <option value="stats">📊 Stats & Proba</option>
@@ -84,9 +85,17 @@
             <div class="flex gap-2 shrink-0">
                 <button id="darkModeBtn" onclick="toggleDarkMode()"
                     class="text-xl px-2 py-1 rounded hover:bg-gray-100 transition">🌙</button>
-                <button onclick="resetCurrentProgress()"
-                    class="text-xs px-2 py-1 md:px-3 md:py-1 rounded border border-red-200 text-red-400 hover:bg-red-50 hover:text-red-600 transition">Reset
-                    Module</button>
+                <button onclick="resetCurrentProgress()" title="Réinitialiser le module"
+                    class="flex items-center gap-2 px-3 py-1.5 rounded-lg bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 hover:border-red-300 dark:hover:border-red-700 hover:bg-red-50 dark:hover:bg-red-900/20 transition-all duration-300 group">
+                    <svg class="w-3.5 h-3.5 text-gray-400 group-hover:text-red-500 group-hover:-rotate-180 transition-transform duration-500"
+                        fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
+                        </path>
+                    </svg>
+                    <span
+                        class="text-xs font-semibold text-gray-500 dark:text-gray-400 group-hover:text-red-500 transition-colors">Reset</span>
+                </button>
             </div>
         </header>
 
@@ -101,6 +110,43 @@
             <span>✅</span> <span id="toast-msg">Bonne réponse !</span>
         </div>
     </main>
+
+    <!-- Home Screen Overlay -->
+    <div id="home-screen"
+        class="fixed inset-0 z-50 bg-slate-900 flex flex-col items-center justify-center text-white transition-opacity duration-1000"
+        style="background-color: #0f172a;">
+        <!-- Background Animation Canvas -->
+        <canvas id="home-bg-canvas" class="absolute inset-0 w-full h-full"></canvas>
+
+        <!-- Content -->
+        <div class="relative z-10 text-center space-y-8 p-6">
+            <div class="mb-4">
+                <span class="text-6xl md:text-8xl animate-pulse">🚀</span>
+            </div>
+            <h1
+                class="text-5xl md:text-7xl font-extrabold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 drop-shadow-lg tracking-tight">
+                Deep Math Academy
+            </h1>
+            <p class="text-xl md:text-2xl text-gray-300 max-w-2xl mx-auto font-light leading-relaxed">
+                Maîtrisez les Mathématiques de l'Intelligence Artificielle.<br>
+                <span class="text-indigo-400 font-medium">Algèbre • Analyse • Probabilités • Quantique</span>
+            </p>
+
+            <button onclick="enterApp()"
+                class="group relative px-8 py-4 bg-white text-indigo-900 font-bold text-xl rounded-full shadow-[0_0_20px_rgba(255,255,255,0.3)] hover:shadow-[0_0_40px_rgba(255,255,255,0.6)] hover:scale-105 transition-all duration-300 overflow-hidden">
+                <span class="relative z-10 flex items-center gap-3">
+                    Commencer l'Aventure <span class="group-hover:translate-x-1 transition-transform">➜</span>
+                </span>
+                <div
+                    class="absolute inset-0 bg-gradient-to-r from-blue-100 to-indigo-100 opacity-0 group-hover:opacity-100 transition-opacity">
+                </div>
+            </button>
+        </div>
+
+        <div class="absolute bottom-8 text-gray-500 text-sm font-mono">
+            v2.0 • Interactive Learning Platform
+        </div>
+    </div>
 
     <script src="js/global.js"></script>
     <script src="js/basics.js"></script>
